# dometodik

./: .envrc  README.md  app.py  auth.py  calendar.py  content.py  do_test.sh  flake.nix  flask_secret  helpers.py  members.json  module.nix  mypy.ini  package.nix  packages.nix  poetry.nix  prepare.sh  pyproject.toml  requirements.txt  shell.nix  shellHook.nix  user.py
.github/workflows/: cd.yml  ci.yml  python-app.yml
app/: app.py  calendar.py  content.py  helpers.py  user.py
app/static/: script.js  style.css
app/templates/: base.html  calendar.html  members.html
dometodik/: __init__.py  app.py  auth.py  content.py  helpers.py  user.py
dometodik/static/: script.js  style.css
dometodik/templates/: base.html  home.html  login.html  members.html
static/: script.js  style.css
stubs/flask_login/: __init__.pyi  login_manager.pyi  mixins.pyi  signals.pyi  utils.pyi
templates/: base.html  calendar.html  home.html  login.html  members.html
tests/: __init__.py  test_basic_e2e.py  test_calender.py  test_helpers.py  test_login_e2e.py
